duck/test/fail/underscore.duck
main = exit 0

_ = _
